@@ -1,2 +1,2 @@
 pref("extensions.multi-ldap.enabled", true);
-pref("ldap_2.autoComplete.minStringLength", 2);
+pref("ldap_2.autoComplete.minStringLength", 1);
