@@ -12,10 +12,10 @@
    - for the specific language governing rights and limitations under the
    - License.
    -
-   - The Original Code is Mozilla Communicator
+   - The Original Code is Trustedbird/Multi-LDAP code.
    -
    - The Initial Developer of the Original Code is
-   -   BT Global Services / Etat francais Ministere de la Defense
+   - BT Global Services / Etat francais Ministere de la Defense
    - Portions created by the Initial Developer are Copyright (C) 2008
    - the Initial Developer. All Rights Reserved.
    -
